# platformer-D-Sills

./: CMakeLists.txt
lab_7_platformer/components/: cmp_physics.cpp
lab_7_platformer/scenes/: scene_level2.cpp  scene_level3.cpp
lib_maths/: maths.h
